Sun Feb  1 05:30:06 2004  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::Generic#find_proxy): warn HTTP_PROXY.
	 raise an errror on non-http proxy URI.
	 (OpenURI::Buffer#<<): make a tempfile binmode.

Sun Feb  1 00:57:41 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb (RSS::Parser): added @@default_parser. Used
	  XML parser became selectable.
	* test/rss/test_parser.rb: added tests for
	  RSS::Parser.default_parser.

Sat Jan 31 02:28:15 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RPATHFLAG): set to -Wl,-R like NetBSD on Interix.

Sat Jan 31 01:09:41 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb: leading 0 padding of timestamp usec part.

Thu Jan 29 23:11:57 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (DLEXT2): removed.  Ruby does not treat
	  ".dll" as a extention library anymore.

	* bcc32/Makefile.sub, win32/Makefile.sub, wince/Makefile.sub (DLEXT2):
	  ditto.

	* util.c (mblen): fix overrun.  [ruby-dev:22672]

Thu Jan 29 22:41:53 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Allow 'link:' in Tidylinks.
	  THis means you can write "see f1[link:files/f1_rb.html]".

Thu Jan 29 22:24:47 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* sample/openssl/gen_csr.rb: follow OpenSSL::X509::Name change.
	  ASN.1 type of subject DN elements were wrong.

Thu Jan 29 22:19:51 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/*: remove $: trick.  [ruby-dev:22763]  use test/runner.rb to
	  run test.

Thu Jan 29 19:28:16 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (Request#initialize): reject only when a path is
	  empty. [ruby-dev:22771]

Thu Jan 29 18:54:08 2004  H.Yamamoto  <ocean@m2.ccsnet.ne.jp>.

	* dir.c (glob_helper): infinite loop bug in win32 code.
	  [ruby-dev:22770] 

Thu Jan 29 17:03:49 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c: merge tuning from H.Yamamoto <ocean@m2.ccsnet.ne.jp>.
	  [ruby-dev:22761]
